syntax = "proto3";

package belifeline.v1;

import "belifeline/v1/models/koyo.proto";
import "belifeline/v1/models/types.proto";

option go_package = "github.com/halcyon-org/kizuna/gen/belifeline/v1;mainv1";

message KoyoInformationCreate {
  string koyo_name = 1;
  string koyo_description = 2;
  repeated belifeline.v1.models.UUID need_external = 3;
  map<string, string> koyo_params = 4;
  repeated float koyo_scales = 5;
  belifeline.v1.models.Version version = 6;
  repeated belifeline.v1.models.Version version_history = 7;
  string license = 8;
  repeated string ext_licenses = 9;
  belifeline.v1.models.DataType data_type = 10;
}

message KoyoInformationCreateOrUpdate {
  belifeline.v1.models.UUID koyo_id = 1;
  string koyo_name = 2;
  string koyo_description = 3;
  repeated belifeline.v1.models.UUID need_external = 4;
  map<string, string> koyo_params = 5;
  repeated float koyo_scales = 6;
  repeated belifeline.v1.models.UUID koyo_data_ids = 7;
  belifeline.v1.models.Version version = 8;
  repeated belifeline.v1.models.Version version_history = 9;
  string license = 10;
  repeated string ext_licenses = 11;
  belifeline.v1.models.DataType data_type = 12;
}

message ExternalInformationCreate {
  string external_name = 1;
  string external_description = 2;
  string license = 3;
  string license_description = 4;
  string first_entry_at = 5;
  string last_updated_at = 6;
  repeated string updated_history = 7;
}

message ClientCreateRequest {
  string username = 1;
}

enum RequestType {
  REQUEST_TYPE_UNSPECIFIED = 0;
  REQUEST_TYPE_TMS = 1;
  REQUEST_TYPE_GEOJSON = 2;
}

message ListRequest {
  int32 limit = 1;
}

message ClientIdentifier {
  belifeline.v1.models.UUID client_id = 1;
}

message ExtInfoIdentifier {
  belifeline.v1.models.UUID extinfo_id = 1;
}

message KoyoIdentifier {
  belifeline.v1.models.UUID koyo_id = 1;
}

message ApiKeyRevokeRequest {
  belifeline.v1.models.UUID koyo_id = 1;
  belifeline.v1.models.ApiKey api_key = 2;
}

message RevokeResponse {
  belifeline.v1.models.UUID koyo_id = 1;
  belifeline.v1.models.ApiKey api_key = 2;
}

message Empty {}

message StatusResponse {
  string status = 1;
}
