syntax = "proto3";

package belifeline.v1.models;

import "belifeline/v1/models/types.proto";

option go_package = "github.com/halcyon-org/kizuna/gen/belifeline/v1;mainv1";

// ExtInfo Messages
message ExampleInfoExampleData {
  MultiPolygon area = 1;
  bytes image = 2;
}

message ExternalInformation {
  UUID external_id = 1;
  string external_name = 2;
  string external_description = 3;
  string license = 4;
  string license_description = 5;
  string first_entry_at = 6;
  string last_updated_at = 7;
  repeated string updated_history = 8;
}
